Client and mechanic services added

--- a/OtoTamir.WEBUI/appsettings.json
+++ b/OtoTamir.WEBUI/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-OM2N2UM;Database=OtoTamirDB;Integrated Security=true;TrustServerCertificate=true"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
