--- a/OtoTamir.WEBUI/appsettings.json
+++ b/OtoTamir.WEBUI/appsettings.json
@@ -1,7 +1,9 @@
 {
 
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-OM2N2UM;Database=OtoTamirDB;Integrated Security=true;TrustServerCertificate=true"
+    "Default": "Server=DESKTOP-OM2N2UM;Database=OtoTamirDB;Integrated Security=true;TrustServerCertificate=true",
+    "Laptop": "Server=DESKTOP-9LBM815\\SQLEXPRESS;Database=OtoTamirDB;Integrated Security=true;TrustServerCertificate=true"
+
   },
     "Logging": {
       "LogLevel": {
