--- a/OtoTamir.WEBUI/appsettings.json
+++ b/OtoTamir.WEBUI/appsettings.json
@@ -5,11 +5,17 @@
     "Laptop": "Server=DESKTOP-9LBM815\\SQLEXPRESS;Database=OtoTamirDB;Integrated Security=true;TrustServerCertificate=true"
 
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "MailSettings": {
+    "SenderEmail": "astgm14@gmail.com",
+    "SenderPassword": "jpmk bgtt imyw jesj",
+    "Port": 587,
+    "Host": "smtp.gmail.com"
+  },
+  "AllowedHosts": "*"
+}
